tests/fails/f45.t

terra foo()
  break
end
foo()
